Nested frame support
Handle nested iframes better and handle cross-origin iframes as well

--- a/lorem_ipsum_inner.html
+++ b/lorem_ipsum_inner.html
@@ -2,7 +2,7 @@
 <html>
 <head></head>
 <body>
-  <h1>Outer</h1>
+  <h1>Inner</h1>
   <div>
     <br/>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed varius tellus. Nunc semper sollicitudin lectus, eu rutrum eros lobortis vestibulum. Fusce nec commodo enim. In non accumsan purus, vel vehicula ipsum. Aenean congue est sit amet tempus ornare. Nulla luctus, metus sit amet ornare tristique, tortor sem rutrum tellus, tincidunt hendrerit risus mauris feugiat ante. Nulla turpis turpis, lobortis ut lorem ac, congue tincidunt turpis. Donec elementum, magna non luctus efficitur, massa dui ultrices ligula, et feugiat elit lacus tincidunt risus. Ut magna est, eleifend sit amet pellentesque nec, sollicitudin in tellus. Phasellus placerat ullamcorper dui vel pretium. Etiam commodo rhoncus hendrerit. Praesent congue, odio quis ultrices facilisis, magna nulla sagittis odio, sed pellentesque sapien nulla sit amet dui. Donec luctus ullamcorper velit. Proin varius a justo vel tristique.
@@ -14,9 +14,6 @@
     Vestibulum ut dolor in urna placerat porta hendrerit et velit. Phasellus quis egestas elit. In vehicula ipsum ut turpis mollis rutrum ac sit amet quam. Phasellus tempor, ex et semper rutrum, magna leo mattis nunc, sed condimentum mauris eros at nibh. Nullam id nisi sed urna mollis bibendum. Donec egestas, est fringilla condimentum tempus, felis nulla fermentum metus, ultricies consectetur lacus quam nec ipsum. Nullam sollicitudin lacus leo, sit amet tempus mi venenatis quis. Maecenas faucibus condimentum lacus, laoreet dignissim ante laoreet vel. Aenean malesuada magna quis ipsum accumsan luctus.
     <br/>
     Nam posuere purus vel consectetur pretium. Aenean faucibus vitae orci eu viverra. Sed consectetur vulputate commodo. Nunc pulvinar lorem quis quam lobortis molestie. Phasellus dignissim sapien eu vulputate eleifend. Aliquam elementum, velit vel auctor euismod, ante est sagittis massa, varius commodo justo dolor a metus. Sed et metus egestas, fermentum nulla ut, scelerisque mi. Aenean at ligula ac dolor viverra fringilla.
-  </div>
-  <div style="height: 100px;">
-    <iframe src="lorem_ipsum_inner.html" height="100px" ></iframe>
   </div>
 </body>
 </html>
