--- a/test.html
+++ b/test.html
@@ -2,8 +2,9 @@
 <html>
 <head></head>
 <body>
-<div height="100px">
-<iframe src="lorem_ipsum.html" height="100px" ></iframe>
-</div>
+  <h1>Top</h1>
+  <div style="height: 100px;">
+    <iframe src="lorem_ipsum.html" height="100px" ></iframe>
+  </div>
 </body>
 </html>
